--- a/contact.html
+++ b/contact.html
@@ -70,9 +70,7 @@ input[type=submit]:hover {
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-       <a class="navbar-brand" href="https://craigserivces.github.io/cloacas12/"><!--Site Name-->
-Destapaciones De Cloacas
-<!--endSite Name--></a>
+       <a class="navbar-brand" href="https://craigserivces.github.io/cloacas12/"><!--Site Name-->Destapaciones De Cloacas<!--endSite Name--></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -104,9 +102,7 @@ Destapaciones De Cloacas
 
         <!-- Post Content Column -->
         <div class="col-lg-8">
-		<div><p>Contact <strong><!--Site Name-->
-Destapaciones De Cloacas
-<!--endSite Name--></strong> using the forum below</p></div>
+		<div><p>Contact <strong><!--Site Name-->Destapaciones De Cloacas<!--endSite Name--></strong> using the forum below</p></div>
 
         <h3>Contact Form</h3>
 
@@ -197,9 +193,7 @@ Destapaciones De Cloacas
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white"><!--Footer-->
-Destapaciones De Cloacas
-<!--endFooter--></p>
+        <p class="m-0 text-center text-white"><!--Footer-->Destapaciones De Cloacas<!--endFooter--></p>
       </div>
       <!-- /.container -->
     </footer>
